--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://dbtype.github.io/"
+baseURL = "https://sartiani.github.io/"
 languageCode = "en-us"
 title = "DBType Research Group"
 theme = "dbtype-theme"
